<resources>
    <string name="app_name">PRM391x_TourGuide_FX05543</string>
    <string name="location_title">HCMC, Vietnam</string>
    <string name="hotel_title">Khách sạn</string>
    <string name="atm_title">ATM</string>
    <string name="hospital_title">Bệnh viện</string>
    <string name="bus_title">Xe Bus</string>
    <string name="hotel_01">Vinpearl Luxury Landmark 81</string>
    <string name="hotel_01_address">720A Điện Biên Phủ Phường 22, Quận Bình Thạnh, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="hotel_01_url">https://www.vinpearl.com/vi/hotels/vinpearl-luxury-landmark-81</string>
    <string name="hotel_02">Lotte Hotel Saigon</string>
    <string name="hotel_02_address">2A - 4A Tôn Đức Thắng, Quận 1, Thành phố Hồ Chí Minh 70000 Việt Nam</string>
    <string name="hotel_02_url">https://www.lottehotel.com/</string>
    <string name="hotel_03">Park Hyatt Sài Gòn</string>
    <string name="hotel_03_address">Số 2 Công Trường Lam Sơn, Phường Bến Nghé, Quận 1, Thành phố Hồ Chí Minh 70000 Việt Nam</string>
    <string name="hotel_03_url">https://www.hyatt.com/en-US/hotel/vietnam/park-hyatt-saigon/saiph</string>
    <string name="hotel_04">Hotel Nikko Saigon</string>
    <string name="hotel_04_address">235 Nguyễn Văn Cừ, Thành phố Hồ Chí Minh Việt Nam</string>
    <string name="hotel_04_url">https://www.hotelnikkosaigon.com.vn/</string>
    <string name="hotel_05">Pullman Saigon Centre</string>
    <string name="hotel_05_address">148 Trần Hưng Đạo Quận 1, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="hotel_05_url">https://www.pullman-saigon-centre.com/</string>
    <string name="hotel_06">Hotel des Arts Saigon Mgallery</string>
    <string name="hotel_06_address">76-78 Nguyễn Thị Minh Khai, Quận 3, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="hotel_06_url">https://www.hoteldesartssaigon.com/vi/</string>
    <string name="hotel_07">Sofitel Saigon Plaza</string>
    <string name="hotel_07_address">17 Lê Duẩn, Quận 1, Thành phố Hồ Chí Minh 70000 Việt Nam</string>
    <string name="hotel_07_url">https://sofitel-saigon-plaza.com/vi/</string>
    <string name="hotel_08">Khách sạn Caravelle Sài Gòn</string>
    <string name="hotel_08_address">19-23 Công Trường Lam Sơn, Quận 1, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="hotel_08_url">https://www.caravellehotel.com/vi/home-vi/</string>
    <string name="hotel_09">Khách sạn New World Sài Gòn</string>
    <string name="hotel_09_address">76 Lê Lai, Quận 1, Thành phố Hồ Chí Minh 70000 Việt Nam</string>
    <string name="hotel_09_url">https://saigon.newworldhotels.com/</string>
    <string name="hotel_10">Mia Saigon Luxury Boutique Hotel</string>
    <string name="hotel_10_address">2-4 Đường số 10, phường An Phú, Quận 2, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="hotel_10_url">https://www.miasaigon.com/</string>
    <string name="atm_01">ATM OCB Hội Sở</string>
    <string name="atm_01_address">45 Lê Duẩn, Quận 1, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="atm_01_url">http://ocb.nganhangbank.com/dia-diem-atm/ho-chi-minh/le-duan</string>
    <string name="atm_02">ATM OCB Hân Nam</string>
    <string name="atm_02_address">65 Nguyễn Du, Phường Bến Nghé, Quận 1, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="atm_02_url">http://ocb.nganhangbank.com/dia-diem-atm/ho-chi-minh/han-nam</string>
    <string name="atm_03">ATM OCB PGD Kinh Tế</string>
    <string name="atm_03_address">135 Trần Hưng Đạo, Phường Cầu Ông Lãnh, Quận 1, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="atm_03_url">http://ocb.nganhangbank.com/dia-diem-atm/ho-chi-minh/pgd-kinh-te</string>
    <string name="atm_04">ATM OCB Vincom Center</string>
    <string name="atm_04_address">72 Lê Thánh Tôn, Phường Bến Nghé, Quận 1, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="atm_04_url">http://ocb.nganhangbank.com/dia-diem-atm/ho-chi-minh/vincom</string>
    <string name="atm_05">ATM OCB PGD Nguyễn Thái Bình</string>
    <string name="atm_05_address">194 Nguyễn Công Trứ, Phường Nguyễn Thái Bình, Quận 1, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="atm_05_url">http://ocb.nganhangbank.com/chi-nhanh/ho-chi-minh/pgd-nguyen-thai-binh</string>
    <string name="atm_06">ATM OCB PGD Tú Xương</string>
    <string name="atm_06_address">6A Tú Xương, Phường 7, Quận 3, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="atm_06_url">http://ocb.nganhangbank.com/dia-diem-atm/ho-chi-minh/pgd-tu-xuong</string>
    <string name="atm_07">ATM OCB PGD Phạm Ngọc Thạch</string>
    <string name="atm_07_address">17 Phạm Ngọc Thạch, Quận 3, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="atm_07_url">http://ocb.nganhangbank.com/dia-diem-atm/ho-chi-minh/pham-ngoc-thach</string>
    <string name="atm_08">ATM OCB Cao Ốc 123-127</string>
    <string name="atm_08_address">123 - 127 Võ Văn Tần, Quận 3, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="atm_08_url">http://ocb.nganhangbank.com/dia-diem-atm/ho-chi-minh/so-giao-dich</string>
    <string name="atm_09">ATM OCB Nguyễn Văn Trỗi</string>
    <string name="atm_09_address">157 Nguyễn Văn Trỗi, Phường 11, Quận Phú Nhuận, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="atm_09_url">http://ocb.nganhangbank.com/dia-diem-atm/ho-chi-minh/nguyen-van-troi</string>
    <string name="atm_10">ATM OCB Gia Định</string>
    <string name="atm_10_address">Tầng trệt, tòa nhà Gilimex số 24C Phan Đăng Lưu, Phường 6, Quận Bình Thạnh, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="atm_10_url">http://ocb.nganhangbank.com/dia-diem-atm/ho-chi-minh/cn-gia-dinh</string>
    <string name="hospital_01">Bệnh Viện 175</string>
    <string name="hospital_01_address">782 Nguyễn Kiệm, Quận Gò Vấp, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="hospital_01_url">https://benhvien175.vn/</string>
    <string name="hospital_02">Bệnh Viện 30 tháng 4</string>
    <string name="hospital_02_address">9 Sư Vạn Hạnh, Phường 9, Quận 5, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="hospital_02_url">http://benhvien304.com.vn/</string>
    <string name="hospital_03">Bệnh Viện An Bình</string>
    <string name="hospital_03_address">146 An Bình, Phường 7, Quận 5, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="hospital_03_url">https://www.benhvienanbinh.vn/</string>
    <string name="hospital_04">Bệnh Viện An Sinh</string>
    <string name="hospital_04_address">10 Trần Huy Liệu, Phường 12, Quận Phú Nhuận, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="hospital_04_url">http://www.ansinh.com.vn/</string>
    <string name="hospital_05">Bệnh Viện Bệnh Nhiệt đới</string>
    <string name="hospital_05_address">190 Bến Hàm Tử, Phường 1, Quận 5, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="hospital_05_url">https://www.bvbnd.vn/</string>
    <string name="hospital_06">Bệnh Viện Bình Dân</string>
    <string name="hospital_06_address">371 Điện Biên Phủ, Phường 4, Quận 3, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="hospital_06_url">http://bvbinhdan.com.vn/</string>
    <string name="hospital_07">Bệnh Viện Chấn thương Chỉnh hình</string>
    <string name="hospital_07_address">929 Trần Hưng Đạo, Phường 1, Quận 5, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="hospital_07_url">http://bvctch.vn/</string>
    <string name="hospital_08">Bệnh Viện Chợ Rẫy</string>
    <string name="hospital_08_address">201B Nguyễn Chí Thanh, Quận 5, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="hospital_08_url">http://choray.vn/</string>
    <string name="hospital_09">Bệnh Viện Đa Khoa Hoàn Mỹ Sài Gòn</string>
    <string name="hospital_09_address">60-60A Phan Xích Long, Phường 1, Quận Phú Nhuận, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="hospital_09_url">https://www.hoanmysaigon.com/</string>
    <string name="hospital_10">Bệnh Viện Đa Khoa Sài Gòn</string>
    <string name="hospital_10_address">125 Lê Lợi, Phường Bến Thành, Quận 1, Thành phố Hồ Chí Minh 700000 Việt Nam</string>
    <string name="hospital_10_url">http://benhviendakhoasaigon.vn/</string>
    <string name="bus_01">Tuyến 01</string>
    <string name="bus_01_destination">Bến Thành – Bến xe Chợ Lớn</string>
    <string name="bus_01_url">https://xe-buyt.com/ben-thanh-ben-xe-cho-lon.html</string>
    <string name="bus_02">Tuyến 02</string>
    <string name="bus_02_destination">Bến xe buýt Sài Gòn - Bến xe Miền Tây</string>
    <string name="bus_02_url">https://xe-buyt.com/ben-thanh-ben-xe-mien-tay.html</string>
    <string name="bus_03">Tuyến 03</string>
    <string name="bus_03_destination">Bến xe buýt Sài Gòn - Bến xe buýt Thạnh Lộcn</string>
    <string name="bus_03_url">https://xe-buyt.com/ben-thanh-thanh-loc.html</string>
    <string name="bus_04">Tuyến 04</string>
    <string name="bus_04_destination">Bến xe buýt Sài Gòn- Cộng Hòa - Bến xe An Sương</string>
    <string name="bus_04_url">https://xe-buyt.com/ben-thanh-cong-hoa-an-suong.html</string>
    <string name="bus_05">Tuyến 05</string>
    <string name="bus_05_destination">Bến Xe Chợ Lớn – Biên Hòa</string>
    <string name="bus_05_url">https://xe-buyt.com/ben-xe-cho-lon-bien-hoa.html</string>
    <string name="bus_06">Tuyến 06</string>
    <string name="bus_06_destination">Bến xe Chợ Lớn – Đại học Nông Lâm</string>
    <string name="bus_06_url">https://xe-buyt.com/ben-xe-cho-lon-dai-hoc-nong-lam.html</string>
    <string name="bus_07">Tuyến 07</string>
    <string name="bus_07_destination">Bến xe Chợ Lớn – Gò Vấp</string>
    <string name="bus_07_url">https://xe-buyt.com/ben-xe-cho-lon-go-vap.html</string>
    <string name="bus_08">Tuyến 08</string>
    <string name="bus_08_destination">Bến xe Quận 8 – Đại học Quốc gia</string>
    <string name="bus_08_url">https://xe-buyt.com/ben-xe-quan-8-dai-hoc-quoc-gia.html</string>
    <string name="bus_09">Tuyến 09</string>
    <string name="bus_09_destination">Bến xe buýt Chợ Lớn - Bình Chánh - Hưng Long</string>
    <string name="bus_09_url">https://xe-buyt.com/cho-lon-binh-chanh-hung-long.html</string>
    <string name="bus_10">Tuyến 10</string>
    <string name="bus_10_destination">Đại học Quốc gia – Bến xe Miền Tây</string>
    <string name="bus_10_url">https://xe-buyt.com/dai-hoc-quoc-gia-ben-xe-mien-tay.html</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>