<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/padding"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_width="@dimen/flag_width"
            android:layout_height="@dimen/flag_height"
            android:src="@drawable/vietnam"
            android:backgroundTint="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/main_activity_imb_hotel"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:scaleType="centerCrop"
                android:src="@drawable/hotel"
                android:backgroundTint="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotel_title"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/main_activity_imb_atm"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:scaleType="centerCrop"
                android:src="@drawable/atm_machine"
                android:backgroundTint="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atm_title"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/main_activity_imb_hospital"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:scaleType="centerCrop"
                android:src="@drawable/hospital"
                android:backgroundTint="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospital_title"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/main_activity_imb_bus"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:scaleType="centerCrop"
                android:src="@drawable/metro"
                android:backgroundTint="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus_title"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>